--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </header>
       <!-- Aqui finaliza el header -->
       <h1>PROGRAMA 2023 / 2024</h1>
+      <h2>Equipo Docente</h2>
       <div class="team">
         <div class="profesor">
           <figure class="foto">
@@ -50,6 +51,7 @@
           <p class="nombre">
               Jose<br>Cano
           </p>
+          <p class="cargo">Docente</p>
           </div>
           <div class="profesor">
             <figure class="foto">
@@ -58,6 +60,7 @@
             <p class="nombre">
                 Alberto<br>Sanglier
             </p>
+            <p class="cargo">Director Docente</p>
             </div>
             <div class="profesor">
               <figure class="foto">
@@ -66,6 +69,7 @@
               <p class="nombre">
                 Inmaculada<br>Sicilia
               </p>
+              <p class="cargo">Administrativa</p>
               </div>
         <div class="miembro">
           <figure class="foto">
@@ -75,6 +79,7 @@
             />
           </figure>
           <p class="name">ELENA<br>ALVAREZ FISCER</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -84,6 +89,7 @@
             />
           </figure>
           <p class="name">KYLLIAN<br>ARRIBAS GARCÍA</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -93,6 +99,7 @@
             />
           </figure>
           <p class="name">CRISTINA <br>BECERRA MORENO</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -102,6 +109,7 @@
             />
           </figure>
           <p class="name">ERIKA CRYSTAL <br>BELLO VARGAS</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -111,6 +119,7 @@
             />
           </figure>
           <p class="name">ABDELKBIR <br>BENALI BENALI</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -120,6 +129,7 @@
             />
           </figure>
           <p class="name">NAOMI CAROLINA <br>CANGO COBOS</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -129,6 +139,7 @@
             />
           </figure>
           <p class="name">ROBERTO <br>CERDÁ TARDÓN</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -138,6 +149,7 @@
             />
           </figure>
           <p class="name">ANDREA <br>CUENCA RODRIGUEZ-OSORIO</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -147,6 +159,7 @@
             />
           </figure>
           <p class="name">ANDRA ELENA <br>GRUMEZA</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -156,6 +169,7 @@
             />
           </figure>
           <p class="name">VERONICA <br>HUERTAS SMOLIS</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -165,6 +179,7 @@
             />
           </figure>
           <p class="name">ANDRÉS <br>NAVARRO VILLANUEVA</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -174,6 +189,7 @@
             />
           </figure>
           <p class="name">RUTH <br>RAMA VILLANUEVA</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -183,6 +199,7 @@
             />
           </figure>
           <p class="name">CARMEN <br>RUIZ GONZÁLEZ</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -192,6 +209,7 @@
             />
           </figure>
           <p class="name">DANIEL <br>VARGAS DE MIGUEL</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -201,6 +219,7 @@
             />
           </figure>
           <p class="name">PIETRO MARCELO <br>VALESTEGUI GARCES</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -210,6 +229,7 @@
             />
           </figure>
           <p class="name">ALBERTO <br>VICENTE FERNANDEZ</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
         <div class="miembro">
           <figure class="foto">
@@ -219,6 +239,7 @@
             />
           </figure>
           <p class="name">CRISTIAN <br>VILLANUEVA PÉREZ</p>
+          <p class="cargo">Alumno <br>Trabajador</p>
         </div>
       </div>
     </div>
